contracts/build_error_utf8.txt
cargo : warning: 
profiles for the non 
root package will be 
ignored, specify 
profiles at the 
workspace root:
At line:1 char:1
+ cargo build 
--release --target wa
sm32-unknown-unknown 
--package battl ...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (warning   
 : profil...works    
pace root::Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
package:   D:\Project
s\DarkWater ZK\contra
cts\battleship_game\C
argo.toml
workspace: D:\Project
s\DarkWater ZK\contra
cts\Cargo.toml
warning: profiles 
for the non root 
package will be 
ignored, specify 
profiles at the 
workspace root:
package:   D:\Project
s\DarkWater ZK\contra
cts\verifier\Cargo.to
ml
workspace: D:\Project
s\DarkWater ZK\contra
cts\Cargo.toml
   Compiling 
battleship-game 
v0.1.0 (D:\Projects\D
arkWater ZK\contracts
\battleship_game)
   Compiling 
bn254-verifier 
v0.1.0 (D:\Projects\D
arkWater ZK\contracts
\verifier)
error: The system 
cannot find the path 
specified. (os error 
3)
  --> battleship_game
\src\lib.rs:75:5
   |
75 | /     soroban_sd
k::contractimport!(
76 | |         file 
= "../../verifier/tar
get/wasm32-unknown-un
known/release/bn254_v
erifier.wasm"
77 | |     );
   | |_____^
   |
   = note: this 
error originates in 
the macro `soroban_sd
k::contractimport` 
(in Nightly builds, 
run with -Z 
macro-backtrace for 
more info)

warning: unused 
import: `Vec`
  --> verifier\src\li
b.rs:10:25
   |
10 |     Bytes, 
BytesN, Env, Vec,
   |                 
        ^^^
   |
   = note: `#[warn(un
used_imports)]` 
(part of 
`#[warn(unused)]`) 
on by default

error[E0308]: 
mismatched types
   --> verifier\src\l
ib.rs:28:13
    |
 26 |         soroban
_sdk::Error::from_typ
e_and_code(
    |         -------
---------------------
---------- arguments 
to this function are 
incorrect
 27 |             sor
oban_sdk::xdr::ScErro
rType::Contract,
 28 |             e 
as u32,
    |             
^^^^^^^^ expected 
`ScErrorCode`, found 
`u32`
    |
note: associated 
function defined here
   --> C:\Users\vijay
\.cargo\registry\src\
index.crates.io-1949c
f8c6b5b557f\soroban-e
nv-common-22.1.3\src\
error.rs:311:18
    |
311 |     pub const 
fn from_type_and_code
(type_: ScErrorType, 
code: ScErrorCode) 
-> Error {
    |                
  ^^^^^^^^^^^^^^^^^^

warning: unused 
variable: `alpha_g1`
   --> verifier\src\l
ib.rs:181:13
    |
181 |         let 
alpha_g1 = Bytes::fro
m_array(env, &[
    |             
^^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_alpha_g1`
    |
    = note: `#[warn(u
nused_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
variable: `proof_a`
   --> verifier\src\l
ib.rs:166:9
    |
166 |         
proof_a: &Bytes,
    |         
^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_proof_a`

warning: unused 
variable: `proof_b`
   --> verifier\src\l
ib.rs:167:9
    |
167 |         
proof_b: &Bytes,
    |         
^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_proof_b`

warning: unused 
variable: `proof_c`
   --> verifier\src\l
ib.rs:168:9
    |
168 |         
proof_c: &Bytes,
    |         
^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_proof_c`

warning: unused 
imports: `contract` 
and `contractimpl`
 --> battleship_game\
src\game_hub_interfac
e.rs:7:51
  |
7 | use soroban_sdk::
{Address, Env, 
Symbol, Val, Vec, 
contract, 
contractimpl, 
contracttype};
  |                  
                     
            ^^^^^^^^ 
 ^^^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of 
`#[warn(unused)]`) 
on by default

warning: unused 
imports: `String` 
and `Vec`
  --> battleship_game
\src\lib.rs:13:48
   |
13 |     
symbol_short, 
Address, Bytes, 
BytesN, Env, String, 
Symbol, Vec,
   |                 
                     
          ^^^^^^     
     ^^^

For more information 
about this error, 
try `rustc --explain 
E0308`.
warning: 
`bn254-verifier` 
(lib) generated 5 
warnings
error: could not 
compile 
`bn254-verifier` 
(lib) due to 1 
previous error; 5 
warnings emitted
warning: build 
failed, waiting for 
other jobs to 
finish...
error[E0308]: 
mismatched types
   --> battleship_gam
e\src\lib.rs:52:13
    |
 50 |         soroban
_sdk::Error::from_typ
e_and_code(
    |         -------
---------------------
---------- arguments 
to this function are 
incorrect
 51 |             sor
oban_sdk::xdr::ScErro
rType::Contract,
 52 |             e 
as u32,
    |             
^^^^^^^^ expected 
`ScErrorCode`, found 
`u32`
    |
note: associated 
function defined here
   --> C:\Users\vijay
\.cargo\registry\src\
index.crates.io-1949c
f8c6b5b557f\soroban-e
nv-common-22.1.3\src\
error.rs:311:18
    |
311 |     pub const 
fn from_type_and_code
(type_: ScErrorType, 
code: ScErrorCode) 
-> Error {
    |                
  ^^^^^^^^^^^^^^^^^^

warning: variable 
does not need to be 
mutable
   --> battleship_gam
e\src\lib.rs:494:13
    |
494 |         let 
mut game = 
Self::get_game(&env, 
game_id);
    |             
----^^^^
    |             |
    |             
help: remove this 
`mut`
    |
    = note: `#[warn(u
nused_mut)]` (part 
of 
`#[warn(unused)]`) 
on by default

warning: 
`battleship-game` 
(lib) generated 3 
warnings
error: could not 
compile 
`battleship-game` 
(lib) due to 2 
previous errors; 3 
warnings emitted
